<resources>
<string name="app_name">Simple Calculator</string>
<string name="backspace">\u232b</string>
<string name="zero">0</string>
<string name="one">1</string>
<string name="two">2</string>
<string name="three">3</string>
<string name="four">4</string>
<string name="five">5</string>
<string name="six">6</string>
<string name="seven">7</string>
<string name="eight">8</string>
<string name="nine">9</string>
<string name="plus">+</string>
<string name="minus">-</string>
<string name="times">&#215;</string>
<string name="divide">&#247;</string>
    <string name="dot">.</string>
    <string name="equals">&#61;</string>
    <string name="clear_current">C</string>
    <string name="clear_all">CE</string>
</resources>
